# programowanie-grafiki

./: .gitignore  CMakeLists.txt
src/: main.c
